--- a/src/org/systemsbiology/biofabric/plugin/core/align/NetworkAlignment.properties
+++ b/src/org/systemsbiology/biofabric/plugin/core/align/NetworkAlignment.properties
@@ -71,3 +71,6 @@ networkAlignment.perfect=Perfect Alignment:
 networkAlignment.perfectNodeGroups=Perfect Node Groups:
 networkAlignment.symmetricSubstructureScore=Symmetric Substructure Score
 networkAlignment.title=Network Alignment
+networkAlignment.jaccardSimilarityLabel=Jaccard Similarity Threshold:
+networkAlignment.jaccardSimilarityMsg=The Jaccard Similarity threshold must be between 0.0 and 1.0, inclusive.
+networkAlignment.jaccardSimilarityMsgTitle=Jaccard Similarity Threshold Error
