topological measure fix plus singleton network fix
Topological measures do not show if there is no edge set (0/0 case);
net aligns with singleton nodes only are displayed with warning message

--- a/src/org/systemsbiology/biofabric/plugin/core/align/NetworkAlignment.properties
+++ b/src/org/systemsbiology/biofabric/plugin/core/align/NetworkAlignment.properties
@@ -39,7 +39,7 @@ networkAlignment.browse=Browse...
 networkAlignment.cancel=Cancel
 networkAlignment.confirmUndirected=Confirm networks are undirected. (Only undirected graphs can be analyzed.)
 networkAlignment.edgeCoverage=Edge Coverage
-networkAlignment.emptyNetwork=network is empty (0 nodes, 0 edges) after processing.
+networkAlignment.emptyNetwork=network has empty edge set after processing.
 networkAlignment.emptyNetworkTitle=Empty Network
 networkAlignment.cycleSubsetErrorMessage=If perfect alignment is not provided, Graph 1's nodes must be a subset of Graph 2's nodes.
 networkAlignment.cycleSubsetErrorMessageTitle=Cycle Layout Load Error
