Graph assignment from dialog
Now if graphs are of same node set size, they must be entered in
correct order.

--- a/src/org/systemsbiology/biofabric/plugin/core/align/NetworkAlignment.properties
+++ b/src/org/systemsbiology/biofabric/plugin/core/align/NetworkAlignment.properties
@@ -52,7 +52,7 @@ networkAlignment.mapError=Node mapping must be one-to-one. {0} in Graph1 has two
 networkAlignment.mapSizeError=Alignment map size ({0}) does not equal number of Graph1 nodes ({1}).
 networkAlignment.measureMessage=Here are the measures calculated for this alignment. Some measures require the perfect alignment.
 networkAlignment.measures=Calculated Measures
-networkAlignment.message=Enter graph files in any order.
+networkAlignment.message=Enter graph files in any order unless graphs have the same number of nodes.
 networkAlignment.messageCycleTwo=Perfect alignment file is required if networks use different node names.
 networkAlignment.messageNonGroup=Enter graph files in any order.
 networkAlignment.missingFiles=One or more files missing
