--- a/src/org/systemsbiology/biofabric/plugin/core/align/NetworkAlignment.properties
+++ b/src/org/systemsbiology/biofabric/plugin/core/align/NetworkAlignment.properties
@@ -44,6 +44,7 @@ networkAlignment.emptyNetwork=network has empty edge set after processing.
 networkAlignment.emptyNetworkTitle=Empty Network
 networkAlignment.cycleSubsetErrorMessage=If perfect alignment is not provided, Graph 1's nodes must be a subset of Graph 2's nodes.
 networkAlignment.cycleSubsetErrorMessageTitle=Cycle Layout Load Error
+networkAlignment.hasBeen=...has been aligned onto...
 networkAlignment.graph1=Graph 1:
 networkAlignment.graph2=Graph 2:
 networkAlignment.inducedConservedStructure=Induced Conserved Structure
@@ -53,9 +54,8 @@ networkAlignment.mapError=Node mapping must be one-to-one. {0} in Graph1 has two
 networkAlignment.mapSizeError=Alignment map size ({0}) does not equal number of Graph1 nodes ({1}).
 networkAlignment.measureMessage=Here are the measures calculated for this alignment. Some measures require the perfect alignment.
 networkAlignment.measures=Calculated Measures
-networkAlignment.message=Graph 1 must be aligned to Graph 2.
+networkAlignment.message=Note: Graph 1 has been aligned onto Graph 2.
 networkAlignment.messageCycleTwo=Perfect alignment file is required if networks use different node names.
-networkAlignment.messageNonGroup=Enter graph files in any order.
 networkAlignment.missingFiles=One or more files missing
 networkAlignment.missingFilesTitle=Files Missing
 networkAlignment.noMeasuresAvailable=No measures are available.
@@ -75,3 +75,7 @@ networkAlignment.title=Network Alignment
 networkAlignment.jaccardSimilarityLabel=Jaccard Similarity Threshold:
 networkAlignment.jaccardSimilarityMsg=The Jaccard Similarity threshold must be between 0.0 and 1.0, inclusive.
 networkAlignment.jaccardSimilarityMsgTitle=Jaccard Similarity Threshold Error
+shadowAndGroups.title=Toggle Shadow Link Display On? 
+shadowAndGroups.nodeGroups=With shadow links not enabled, alignment paths/cycles must be displayed using node annotations.
+shadowAndGroups.linkGroups=With shadow links enabled, alignment paths/cycles an be displayed using link annotations.   
+shadowAndGroups.turnOnShadows=Show Shadow Links
